--- a/app/page.module.css
+++ b/app/page.module.css
@@ -107,7 +107,7 @@
 }
 
 /* Mobile */
-@media (max-width: 700px) {
+@media (max-width: 1400px) {
   .content {
     padding: 4rem;
   }
@@ -117,6 +117,10 @@
     margin-bottom: 120px;
     max-width: 320px;
     text-align: center;
+  }
+
+  .category {
+    padding: 4rem;
   }
 
   .card {
